# slimfarmer

./: ._group.py.swo  ._group.py.swp  .config.py.swl  .config.py.swm  .config.py.swn  .config.py.swo  .config.py.swp  .image.py.swo  .image.py.swp  .track.py.swp  .utils.py.swn  .utils.py.swp  README.md  __init__.py  _group.py  _utils.py  config.py  diag.py  image.py  pyproject.toml  setup.py  track.py  tutorial.ipynb  utils.py
doc/: Flux_error_validation_colab.ipynb  compute_kappa_implementation.md  correlated_noise_correction.md  demo.ipynb  galsim_slimfarmer-Correlated.ipynb
doc/.ipynb_checkpoints/: demo-checkpoint.ipynb  galsim_slimfarmer-Correlated-checkpoint.ipynb  tutorial-checkpoint.ipynb
docs/: research_note.md
slimfarmer/: .config.py.swp  .forced.py.swp  .image.py.swo  .image.py.swp  __init__.py  _group.py  config.py  export_Rubin_coadds.py  flags.py  forced.py  image.py  track.py  utils.py
slimfarmer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
